<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="16dp"
    android:theme="@style/Base.Theme.GrowPlant"
    android:background="@drawable/backgroud1"
    >


    <!-- Elementos fijos: ImageView y los dos primeros TextViews -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:contentDescription="@string/logogrowplant"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:fontFamily="@font/creatodisplaybold"
        android:textSize="44sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accede_para_gestionar_tus_plantas"
        android:fontFamily="@font/creatodisplaymedium"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/white"

    />

    <!-- Elementos desplazables: Contenidos dentro del ScrollView -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        android:background="@drawable/rounded_corner"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Campo de correo electrónico -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="62sp"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresar_correo_electr_nico"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contrasenaInputLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresar_contrase_a"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="38dp"/>

            <TextView
                android:id="@+id/txt_enlace_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/no_tienes_cuenta_registrate"
                android:textColor="@color/azul"

                />

            <Button
                android:id="@+id/btn_buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/ingresar"
                android:fontFamily="@font/creatodisplaybold"
                android:textSize="20sp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/segundoAzul"
                android:elevation="8dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
