<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroDeUsuario"
    android:padding="16dp"
    android:theme="@style/Base.Theme.GrowPlant"
    android:background="@drawable/fondo1">

    <!-- Elementos fijos: ImageView y los dos primeros TextViews -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:contentDescription="@string/logogrowplant"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crear una cuenta"
        android:fontFamily="@font/creatodisplaybold"
        android:textSize="44sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/creatodisplaymedium"
        android:text="Regístrate para gestionar tus plantas eficientemente"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <!-- Elementos desplazables: Contenidos dentro del ScrollView -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corner"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Campo de nombre usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="62sp"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombreusuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ingresa tu nombre"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de correo electrónico -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="62sp"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresar_correo_electr_nico"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contrasenaInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresar_contrase_a"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="18dp" />

            <!-- Campo de confirmación de contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contrasenaInputAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmar_constrase_a"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="28dp" />

            <CheckBox
                android:id="@+id/termsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmacion_term_condiciones" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/txt_enlace_iniciosesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ya_tienes_cuenta_iniciar_sesi_n"
                android:textAlignment="center"
                android:textColor="@color/azul"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_button_registrarse"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/azul"
                android:elevation="8dp"
                android:fontFamily="@font/creatodisplaybold"
                android:text="@string/registrarse"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
