<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    android:padding="16dp"
    tools:context=".PrincipalMenu">

    <GridLayout
        android:id="@+id/gridLa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="3"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        >

        <!-- Primera fila -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="bottom|left"
            android:fontFamily="@font/creatodisplaybold"
            android:gravity="center"
            android:text="Bienvenido"
            android:textColor="@color/white"
            android:textSize="42dp" />

        <ImageButton
            android:id="@+id/SalirApp"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="bottom|center"
            android:background="@android:color/transparent"
            android:contentDescription="salir de la app"
            android:scaleType="fitCenter"
            android:src="@drawable/salida" />

        <!-- Segunda fila -->

        <TextView
            android:id="@+id/nombreHuertero"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:layout_gravity="top|center"
            android:layout_marginTop="-5dp"
            android:autoSizeMaxTextSize="40sp"
            android:autoSizeMinTextSize="22sp"
            android:autoSizeStepGranularity="2sp"
            android:fontFamily="@font/creatodisplaymedium"
            android:maxLines="1"
            android:text="Huertero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp" />



    </GridLayout>

    <ImageView
        android:id="@+id/fotoperfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/gridLa1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/fotoperfilpordefecto"
        android:background="@drawable/formacircular_pf_img"
        android:scaleType="centerCrop"
        android:clipToOutline="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListaTareas"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:orientation="horizontal"
        tools:listitem="@layout/item_recordatorio"
        android:layout_below="@id/fotoperfil"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/rvListaTareas">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_centerInParent="true"
         >

            <!-- Card 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/IrConfiguración"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="4dp"
                android:backgroundTint="@color/azul"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/config_icon"
                        android:contentDescription="@string/image_desc_1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Configuración del perfil"
                        android:fontFamily="@font/creatodisplaymedium"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/IrRegistroPlantasHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/azul">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/maceta_icon"
                        android:contentDescription="@string/image_desc_2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registro de plantas"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:fontFamily="@font/creatodisplaymedium"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/IrEstadisticas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/azul">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/estadisticas_icon"
                        android:contentDescription="@string/image_desc_3"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Estadísticas"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:fontFamily="@font/creatodisplaymedium"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 4 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/IrInformacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/azul">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/pala_icon"
                        android:contentDescription="@string/image_desc_4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Información"
                        android:textColor="@color/white"
                        android:fontFamily="@font/creatodisplaymedium"
                        android:textSize="17sp"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 5 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/IrRecordatorios"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/azul">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/lista_check_icon"
                        android:contentDescription="Recordatorios icon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Recordatorios"
                        android:textSize="17sp"
                        android:fontFamily="@font/creatodisplaymedium"
                        android:textColor="@color/white"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 6 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/IrRecursos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/azul">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/recusos_icon"
                        android:contentDescription="@string/image_desc_5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Recursos"
                        android:textSize="17sp"
                        android:fontFamily="@font/creatodisplaymedium"
                        android:textColor="@color/white"
                        android:gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>



</RelativeLayout>